Add some keywords which fit to the package

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 		"error",
 		"pipeline",
 		"publish",
-		"hook"
+		"hook",
+		"packages",
+		"modules"
 	],
 	"author": "Jens Duttke <github@duttke.de>",
 	"license": "MIT",
