--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
 	},
 	"devDependencies": {
 		"@types/node": "12.6.9",
+		"@types/proxyquire": "1.3.28",
 		"@typescript-eslint/eslint-plugin": "1.13.0",
 		"@typescript-eslint/parser": "1.13.0",
 		"eslint": "6.1.0",
+		"proxyquire": "2.1.1",
 		"typescript": "3.5.3"
 	}
 }
