--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
 		"node": ">=7.10.1"
 	},
 	"devDependencies": {
-		"@types/node": "12.7.2",
+		"@types/node": "12.7.3",
 		"@types/proxyquire": "1.3.28",
 		"@typescript-eslint/eslint-plugin": "2.0.0",
 		"@typescript-eslint/parser": "2.0.0",
 		"eslint": "6.2.2",
+		"eslint-plugin-jsdoc": "15.8.4",
 		"proxyquire": "2.1.3",
 		"typescript": "3.6.2"
 	}
