Replace "exclude" by "include" to make ESLint 7 work correct

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -34,7 +34,10 @@
 		"suppressExcessPropertyErrors": false,
 		"suppressImplicitAnyIndexErrors": true
 	},
-	"exclude": [
-		"node_modules",
+    "include": [
+		"./*.js",
+		"./.eslintrc.js",
+		"./helper/**/*.js",
+		"./tests/**/*.js"
 	]
 }
