--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"url": "https://github.com/jens-duttke/check-outdated.git"
 	},
 	"scripts": {
-		"lint": "node node_modules/typescript/bin/tsc --project jsconfig.json && eslint **/*.js --format unix",
+		"lint": "node node_modules/typescript/bin/tsc --project jsconfig.json && eslint . --format unix",
 		"test": "node tests",
 		"publish:major": "npm version major",
 		"publish:minor": "npm version minor",
@@ -40,13 +40,13 @@
 		"node": ">=8.6.0"
 	},
 	"devDependencies": {
-		"@types/node": "13.13.5",
+		"@types/node": "14.0.1",
 		"@types/proxyquire": "1.3.28",
-		"@typescript-eslint/eslint-plugin": "2.31.0",
-		"@typescript-eslint/parser": "2.31.0",
-		"eslint": "6.8.0",
-		"eslint-plugin-jsdoc": "24.0.6",
+		"@typescript-eslint/eslint-plugin": "2.33.0",
+		"@typescript-eslint/parser": "2.33.0",
+		"eslint": "7.0.0",
+		"eslint-plugin-jsdoc": "25.4.1",
 		"proxyquire": "2.1.3",
-		"typescript": "3.8.3"
+		"typescript": "3.9.2"
 	}
 }
