--- a/.github/workflows/ensure-nodejs-compatibility.yml
+++ b/.github/workflows/ensure-nodejs-compatibility.yml
@@ -2,9 +2,9 @@ name: Ensure Node.js compatibility
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
