--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"url": "https://github.com/jens-duttke/check-outdated.git"
 	},
 	"scripts": {
-		"lint": "node node_modules/typescript/bin/tsc --project jsconfig.json && eslint . --format unix",
+		"lint": "lint tsc --tsconfig=jsconfig.json ts md audit",
 		"test": "node tests",
 		"publish:major": "npm version major",
 		"publish:minor": "npm version minor",
@@ -41,13 +41,10 @@
 		"node": ">=10.0.0"
 	},
 	"devDependencies": {
-		"@types/node": "14.14.35",
+		"@types/node": "15.3.0",
 		"@types/proxyquire": "1.3.28",
-		"@typescript-eslint/eslint-plugin": "4.19.0",
-		"@typescript-eslint/parser": "4.19.0",
-		"eslint": "7.22.0",
-		"eslint-plugin-jsdoc": "32.3.0",
+		"linter-bundle": "1.17.0",
 		"proxyquire": "2.1.3",
-		"typescript": "4.2.3"
+		"typescript": "4.2.4"
 	}
 }
