--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "check-outdated",
 	"version": "2.8.0",
-	"description": "Ensures that your dependencies are up to date, otherwise the process is terminated with status code 1.",
+	"description": "Light-weight CLI tool to ensure that your dependencies are up to date, otherwise the process is terminated with status code 1.",
 	"keywords": [
 		"cli",
 		"outdated",
