--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"publish:patch": "npm version patch",
 		"preversion": "npm run lint && npm run test && npm run check-outdated",
 		"postversion": "git push && git push --tags && npm publish",
-		"check-outdated": "node check-outdated.js --ignore-pre-releases"
+		"check-outdated": "node check-outdated.js --ignore-pre-releases --minor-only"
 	},
 	"engines": {
 		"node": ">=10.0.0"
