--- a/.github/workflows/ensure-nodejs-compatibility.yml
+++ b/.github/workflows/ensure-nodejs-compatibility.yml
@@ -201,5 +201,5 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install
+    - run: npm install --only=prod
     - run: npm test
