--- a/.github/workflows/ensure-nodejs-compatibility.yml
+++ b/.github/workflows/ensure-nodejs-compatibility.yml
@@ -201,5 +201,6 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install --no-package-lock
+    - run: npm install -g npm@latest
+    - run: npm install
     - run: npm test
