--- a/.github/workflows/ensure-nodejs-compatibility.yml
+++ b/.github/workflows/ensure-nodejs-compatibility.yml
@@ -201,4 +201,6 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - run: rm -f package-lock.json
+    - run: npm install
     - run: npm test
