Workaround for dependencies which are not installable on old npm versions, and which are not required for testing, as we only need "proxyquire" for that

--- a/.github/workflows/ensure-nodejs-compatibility.yml
+++ b/.github/workflows/ensure-nodejs-compatibility.yml
@@ -201,5 +201,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install -g proxyquire
+    - run: rm -f package-lock.json
+    - run: mv package.json _package.json
+    - run: npm install proxyquire
+    - run: mv _package.json package.json
     - run: npm test
