--- a/package.json
+++ b/package.json
@@ -42,10 +42,13 @@
 		"node": ">=10.0.0"
 	},
 	"devDependencies": {
-		"@types/node": "20.9.0",
+		"@types/node": "22.13.10",
 		"@types/proxyquire": "1.3.31",
-		"linter-bundle": "5.1.0",
+		"linter-bundle": "7.3.0",
 		"proxyquire": "2.1.3",
-		"typescript": "5.2.2"
+		"typescript": "5.8.2"
+	},
+	"overrides": {
+		"globals": "16.0.0"
 	}
 }
