--- a/package.json
+++ b/package.json
@@ -42,13 +42,14 @@
 		"node": ">=10.0.0"
 	},
 	"devDependencies": {
-		"@types/node": "22.13.10",
+		"@types/node": "24.10.1",
 		"@types/proxyquire": "1.3.31",
-		"linter-bundle": "7.3.0",
+		"linter-bundle": "7.9.0",
 		"proxyquire": "2.1.3",
-		"typescript": "5.8.2"
+		"typescript": "5.9.3"
 	},
 	"overrides": {
-		"globals": "16.0.0"
+		"globals": "16.5.0",
+		"glob": "12.0.0"
 	}
 }
