--- a/package.json
+++ b/package.json
@@ -44,12 +44,11 @@
 	"devDependencies": {
 		"@types/node": "24.10.1",
 		"@types/proxyquire": "1.3.31",
-		"linter-bundle": "7.9.0",
+		"linter-bundle": "7.10.0",
 		"proxyquire": "2.1.3",
 		"typescript": "5.9.3"
 	},
 	"overrides": {
-		"globals": "16.5.0",
-		"glob": "12.0.0"
+		"globals": "16.5.0"
 	}
 }
